fix: temp commit on showing how to customize the erroprone configs per module